docs: fix the docs index page logo size (#1227)
Fixes the size of the logo on the index page of the documentation.
On mobile or small windows, this logo would be too large.

This adds a rule to the CSS for that logo that fixes it's size.

--- a/docs/_template/light-dark-theme/styles/master.css
+++ b/docs/_template/light-dark-theme/styles/master.css
@@ -39,6 +39,7 @@ img {
     width: 951pt;
     /* Height was arbitrarily determined */
     min-height: 100pt;
+    max-width: 90%;
 }
 
 article.content p{
